Modified readme to reflect gradle installation